fix: update padding in cropper-container for improved layout

--- a/src/pages/BabyGenrator_page/babyPage.css
+++ b/src/pages/BabyGenrator_page/babyPage.css
@@ -799,7 +799,7 @@ n .cropper-container {
     width: 100% !important;
     position: bottom !important;
     /* top: 100% !important; */
-    padding: 0px 12px !important;
+    padding: 0px 26px !important;
     min-width: 100% !important;
     max-width: 100% !important;
     border: none !important;
